# data-science

./: .gitattributes  .gitignore  README.md  pyproject.toml
doc/: setup.md  troubleshooting.md
src/: 2coders_of_delhi.ipynb  cod2.ipynb  cod3.ipynb  coders_of_delhi.ipynb  lambda.ipynb  list-comprehensions.ipynb  notebook1.ipynb  oop.ipynb
src/coders of delhi/: cod3.ipynb  cod4.ipynb
src/coders of delhi/data-files/: cod2_data.json
src/data-files/: numpyVsOpenCLPerformance.csv
src/numpy/: assignments.ipynb  create_nparray.ipynb  learn_numpy.ipynb  minipulation_nparray.ipynb
src/numpyOpenCL/: Untitled.ipynb
src/pandas/: Untitled.ipynb  experiment.ipynb  pandas1.ipynb  pandas2.ipynb  pandas3.ipynb
src/pandas/data-files/: kpis_1998_2003.csv
src/scikitlearn/: new_notebook.ipynb
src/visualization/: numpyVsOpenCL.ipynb  numpyVsOpenCL.py
testing/: test.ipynb
