[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.0",
    "pyopencl>=2024.1",
    "ipython>=8.18.0",
    "ipykernel>=6.29.0",
]

